--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: clone code
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: docker build
         run: docker build -t abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-@GITHUB_RUN_ID .
 
