--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,5 +7,4 @@ jobs:
       - name: clone code
         uses: actions/checkout@v2
       - name: docker build
-        run: docker build -t abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-@GITHUB_RUN_ID .
-
+        run: docker build -t abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
