--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,3 +8,25 @@ jobs:
         uses: actions/checkout@v2
       - name: docker build
         run: docker build -t abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker login
+        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: docker push
+        run: docker push abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+#  deploy:
+#    runs-on: ubuntu-latest
+#    needs: build_and_push
+#    env:
+#      # Здесь мы в секретах гитхаба добавили еще два секрета DB_PASSWORD и DB_NAME
+#      # и пробросили их в переменные окружения
+#      DB_USER: flask_app
+#      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#      DB_NAME: ${{ secrets.DB_NAME }}
+#    steps:
+#      - name: clone code
+#        uses: actions/checkout@v2
+#      - name: render configs
+#        run: |
+#          mkdir deploy
+#          cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+#          cat docker_ci_config.py | envsubst > deploy/docker_config.py
+
