--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,23 +12,39 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: docker push
         run: docker push abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: build_and_push
-#    env:
-#      # Здесь мы в секретах гитхаба добавили еще два секрета DB_PASSWORD и DB_NAME
-#      # и пробросили их в переменные окружения
-#      DB_USER: flask_app
-#      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-#      DB_NAME: ${{ secrets.DB_NAME }}
-#    steps:
-#      - name: clone code
-#        uses: actions/checkout@v2
-#      - name: render configs
-#        run: |
-#          mkdir deploy
-#          cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-#          cat docker_ci_config.py | envsubst > deploy/docker_config.py
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    env:
+      DB_USER: postgres
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+    steps:
+      - name: clone code
+        uses: actions/checkout@v2
+      - name: render configs
+        run: |
+          mkdir deploy
+          cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+          cat docker_ci_config.py | envsubst > deploy/docker_config.py
+      - name: clone files to server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          source: "deploy/docker-compose.yaml,deploy/docker_config.py"
+          target: "flask-app_ci"
+          strip_components: 1
+#      - name: run docker-compose
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.HOST }}
+#          username: ${{ secrets.SSH_USERNAME }}
+#          password: ${{ secrets.SSH_PASSWORD }}
+#          script: |
+#            cd flask-app
+#            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -d
 
 
 
