--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -2,9 +2,7 @@ version: "3.9"
 
 services:
   api:
-    build:
-      context: .
-    image: abdulin1982/skypro_abdulin_app
+    image: abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - 8085:80
     volumes:
@@ -15,9 +13,7 @@ services:
       migrations:
         condition: service_completed_successfully
   migrations:
-    build:
-      context: .
-    image: abdulin1982/skypro_abdulin_app
+    image: abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     volumes:
       - ./docker_config.py:/code/default_config.py
     depends_on:
@@ -28,8 +24,8 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_USER: flask_app
-      POSTGRES_PASSWORD: welcome1
-      POSTGRES_DB: flask_app
+      POSTGRES_PASSWORD: $DB_PASSWORD
+      POSTGRES_DB: $DB_NAME
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
