--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,4 +45,6 @@ jobs:
           port: 8085
           script: |
             cd flask-app_ci
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -d
+            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -
+          
+          
