--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: "3.8"
 
 services:
   api:
@@ -29,7 +29,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U flask_app -d POSTGRES_DB"]
       interval: 5s
       timeout: 5s
       retries: 5
