--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,6 +4,8 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
+      - name: clone code
+        uses: actions/checkout@v2
       - name: docker build
         run: docker build -t abdulin1982/skypro_abdulin_app:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
       - name: docker login
@@ -42,5 +44,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             cd flask-app_ci
-            echo ${{ secrets.SSH_PASSWORD }} | sudo -S docker-compose up -d
+            echo ${{ secrets.SSH_PASSWORD }} | docker-compose up -d
           
